# onnx-pb-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
src/: attrs.rs  lib.rs  util.rs
tests/: integration.rs
